fix(ui): Remove span padding, clean wrap logic

--- a/style.css
+++ b/style.css
@@ -1429,7 +1429,6 @@ a.eco-card-link:hover {
     text-transform: uppercase;
     margin: 0;
     padding: 0;
-    will-change: transform;
 }
 
 .marquee-line > div {
@@ -1441,7 +1440,6 @@ a.eco-card-link:hover {
 .marquee-line span {
     flex: 0 0 auto;
     white-space: nowrap;
-    padding-right: 2em;
 }
 
 /* --- R&D SECTION --- */
